# PortfolioAdvisor

./: .env.example  .gitignore  .python-version  LICENSE  README.md  env.example  pyproject.toml
.cursor/: worktrees.json
.cursor/rules/: documentation.mdc  project-basics.mdc  (+3 more)
.github/: CODEOWNERS
docs/: Architecture.md  TODO.md  confidence-bands-example.md  feature-design-article-text-extraction.md  research-wavelet-analysis.md  stock-analysis-plan.md  wavelet-coi-work-summary.md  wavelet-signal-reconstruction.md
scripts/: bootstrap  format  lint  protect_main.sh  setup-worktree  test
tests/: conftest.py  test_analyst_basket_integration.py  test_analyst_market_enhancement.py  test_analyze.py  test_analyze_end_to_end.py  test_article_extraction.py  test_basket_narrative.py  test_baskets_graph.py  test_boundary_integration.py  test_canonical.py  test_cli.py  test_coi_calculation.py  test_coi_distortion_advanced.py  test_coi_plotting.py  test_config_and_logging.py  test_errors.py  test_ingestion_agent.py  test_io_utils.py  test_llm.py  test_llm_cache.py  test_market_comparison_nodes.py  test_market_metrics_service.py  test_market_overview_llm_integration.py  test_market_state_objects.py  test_news_agents.py  test_ollama_service.py  test_parser.py  test_parser_utils.py  test_polygon_client.py  test_portfolio_persistence.py  test_resolver_agent.py  test_slug.py  test_stock_paths.py  test_stock_report_enhancement.py  test_stocks_analysis.py  test_stocks_db.py  test_stocks_db_helpers.py  test_stocks_graph_pipeline.py  test_stocks_news.py  test_stocks_news_integration.py  (+6 more)
(+67 files in other folders)
